# instruction2sql

./: README.md  app.py  chatbot.py  pyproject.toml
.streamlit/: config.toml
prompt2db/hf_hub/: __init__.py  hf_hub.py
sql_code/: query.sql
